@@ -4,3 +4,4 @@
 # robStepSplitReg 1.0.1
 * Fix badge for README file.
 * Make main function silent.
+* Add additional parameters for PENSE fit.
